<resources>

    <string name="app_name">XYZ Reader</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_font_settings">Font Settings</string>
    <string name="transition_thumbnail">fancy</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="font_name">FontName</string>
    <string name="font_size">FontSize</string>
    <string name="pref_default_font">Roboto-Regular.ttf</string>
    <string name="pref_default_size">FontStyle.Medium</string>
    <string name="up">Up</string>
    <string name="by">by</string>
    <string name="contributer">Lee Hounshell</string>
    <string name="contact">&#160; lee.hounshell@gmail.com</string>
    <string name="description">This project redesigns the Udacity \'xyzreader\' app to follow the new Material Design guidelines.
        The project shows how to materially improve app behavior and design.
    </string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_device">AC98C820A50B4AD8A2106EDE96FB87D4</string>

</resources>
