<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme.About"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.AboutActivity">

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/primary_light"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_item_margin"
                android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                android:paddingTop="@dimen/about_item_margin"
                android:paddingBottom="@dimen/about_item_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/black"
                android:textColorLink="@color/theme_accent"
                android:textSize="@dimen/about_text_size"
                android:lineSpacingMultiplier="@fraction/about_line_spacing_multiplier"
                android:text="@string/description" />

            <ImageView
                style="@style/AboutImage"
                android:id="@+id/LeeHounshellImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/about_item_margin"
                android:paddingBottom="@dimen/about_item_margin"
                android:clickable="true"
                android:contentDescription="@string/contributer"
                android:scaleType="fitCenter"
                android:src="@drawable/lee_hounshell" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/about_item_margin"
                android:paddingBottom="@dimen/about_item_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/about_small_text_size"
                android:text="@string/contributer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/about_bottom_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/about_small_text_size"
                android:text="@string/contact" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <include layout="@layout/app_toolbar" />

    <include layout="@layout/app_action_up" />

</android.support.design.widget.CoordinatorLayout>
